--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -5,8 +5,9 @@ auxiliary.org-netbeans-modules-css-prep.sass_2e_compiler_2e_options=
 auxiliary.org-netbeans-modules-css-prep.sass_2e_enabled=false
 auxiliary.org-netbeans-modules-css-prep.sass_2e_mappings=/scss:/css
 auxiliary.org-netbeans-modules-web-clientproject-api.js_2e_libs_2e_folder=js/libs
+file.reference.Documents-NetBeansProjects=..
 file.reference.Projet_Setram-public_html=public_html
 file.reference.Projet_Setram-test=test
+file.reference.StageSetram2-public_html=public_html
 files.encoding=UTF-8
-site.root.folder=${file.reference.Projet_Setram-public_html}
-test.folder=${file.reference.Projet_Setram-test}
+site.root.folder=${file.reference.StageSetram2-public_html}
